<resources>
    <string name="app_name">Clockwork</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_stopwatch">Stopwatch</string>
    <string name="menu_clock">Clock</string>
    <string name="menu_settings">Settings</string>
    <string name="fab_alarm">Add an alarm</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_select_time">Select time</string>
    <string name="button_delete">Delete</string>
    <string name="channel_name_alarm">Alarm</string>
    <string name="button_stop">Stop</string>
    <string name="snackbar_schedule_exact_alarm_permission">Clockwork needs permission to set alarms and timers</string>
    <string name="snackbar_button_settings">Settings</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="every_day">Every day</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="chip_monday">M</string>
    <string name="chip_tuesday">T</string>
    <string name="chip_wednesday">W</string>
    <string name="chip_thursday">T</string>
    <string name="chip_friday">F</string>
    <string name="chip_saturday">S</string>
    <string name="chip_sunday">S</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="button_snooze">Snooze</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="title_snoozed_alarm">Snoozed Alarm</string>
    <string name="channel_name_snoozed_alarm">Snoozed alarm</string>
    <string name="fab_timer">Add a timer</string>
    <string name="button_hour">Hour</string>
    <string name="button_minute">Minute</string>
    <string name="button_second">Second</string>
    <string name="icon_hour">H</string>
    <string name="icon_minute">M</string>
    <string name="icon_second">S</string>
    <string name="button_clear">Clear</string>
    <string name="button_backspace">Backspace</string>
    <string name="button_start">Start</string>
    <string name="button_pause">Pause</string>
    <string name="channel_name_timer">Timer</string>
    <string name="missed_timer">Missed timer</string>
    <string name="time_is_up">Time\'s up</string>
    <string name="tag_start">start</string>
    <string name="tag_pause">pause</string>
    <string name="channel_name_stopwatch">Stopwatch</string>
    <string name="stopwatch_time_text_view">00.00</string>
    <string name="button_flag">Lap</string>
    <string name="stopwatch_paused">Paused</string>
    <string name="running_timer_count">Timers:</string>
    <string name="button_reset_all">Reset all</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="fab_clock">Add a clock</string>
    <string name="edit_text_hint_time_zone_search">Time zone search</string>
    <string name="fab_time_zone_search">Search time zone</string>
</resources>