<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.main.StopwatchFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/stopwatch_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/stopwatch_time_text_view"
        android:textAppearance="?attr/textAppearanceHeadline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stopwatch_flag_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/start_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopwatch_time_text_view"
        tools:listitem="@layout/item_stopwatch_flag" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/start_fab"
        style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/button_start"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/stop_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/button_stop"
        android:src="@drawable/ic_stop"
        app:layout_constraintBottom_toBottomOf="@+id/start_fab"
        app:layout_constraintEnd_toStartOf="@+id/start_fab"
        app:layout_constraintTop_toTopOf="@+id/start_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/flag_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/button_flag"
        android:src="@drawable/ic_flag"
        app:layout_constraintBottom_toBottomOf="@+id/start_fab"
        app:layout_constraintStart_toEndOf="@+id/start_fab"
        app:layout_constraintTop_toTopOf="@+id/start_fab" />

</androidx.constraintlayout.widget.ConstraintLayout>