<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.main.TimerKeyboardFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timer_time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:text="00:00:00"
        android:textAppearance="?attr/textAppearanceHeadline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:background="@drawable/number_button"
        android:text="1"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/two_button"
        app:layout_constraintRight_toLeftOf="@+id/two_button"
        app:layout_constraintTop_toTopOf="@+id/two_button"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/two_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/number_button"
        android:text="2"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_time_textview"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/three_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:background="@drawable/number_button"
        android:text="3"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/two_button"
        app:layout_constraintLeft_toRightOf="@+id/two_button"
        app:layout_constraintTop_toTopOf="@+id/two_button"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/four_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:background="@drawable/number_button"
        android:text="4"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/five_button"
        app:layout_constraintRight_toLeftOf="@+id/five_button"
        app:layout_constraintTop_toTopOf="@+id/five_button"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/five_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/number_button"
        android:text="5"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two_button"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/six_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:background="@drawable/number_button"
        android:text="6"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/five_button"
        app:layout_constraintLeft_toRightOf="@+id/five_button"
        app:layout_constraintTop_toTopOf="@+id/five_button"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/seven_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:background="@drawable/number_button"
        android:text="7"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/eight_button"
        app:layout_constraintRight_toLeftOf="@+id/eight_button"
        app:layout_constraintTop_toTopOf="@+id/eight_button"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/eight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/number_button"
        android:text="8"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/five_button"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nine_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/number_button"
        android:text="9"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/eight_button"
        app:layout_constraintLeft_toRightOf="@+id/eight_button"
        app:layout_constraintTop_toTopOf="@+id/eight_button"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/two_zeros_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:background="@drawable/number_button"
        android:text="00"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/zero_button"
        app:layout_constraintRight_toLeftOf="@+id/zero_button"
        app:layout_constraintTop_toTopOf="@+id/zero_button"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/zero_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/number_button"
        android:text="0"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eight_button"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backspace_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:background="@drawable/number_button"
        android:contentDescription="@string/button_backspace"
        android:src="@drawable/ic_backspace"
        app:layout_constraintBottom_toBottomOf="@+id/zero_button"
        app:layout_constraintLeft_toRightOf="@+id/zero_button"
        app:layout_constraintTop_toTopOf="@+id/zero_button"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_cancel"
        android:src="@drawable/ic_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_ok"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>